ajustes no .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL="http://jsonplaceholder.typicode.com/"
+NEXT_PUBLIC_API_URL=
 
 NEXT_PUBLIC_SIMULAR_ERRO=true
 NEXT_PUBLIC_SIMULAR_LOADING=false
